--- a/includes/css/style-css.css
+++ b/includes/css/style-css.css
@@ -3010,3 +3010,56 @@ ul.list-arrow li:before {
   margin-right: 5px;
   color: green
 }
+
+
+#forkongithub a {
+  background: #f27600;
+  color: #fff;
+  text-decoration: none;
+  text-align: center;
+  font-weight: bold;
+  padding: 5px 40px;
+  font-size: 12px;
+  line-height: 2rem;
+  transition: 0.5s;
+  width: 200px;
+  position: absolute;
+  top: 40px;
+  right: -50px;
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  box-shadow: box-shadow: 0 0 20px 0 rgba(0, 0, 0, .2);
+}
+
+#forkongithub a:hover {
+  background: #644c80;
+}
+
+#forkongithub a::before, #forkongithub a::after {
+  content: "";
+  width: 100%;
+  display: block;
+  position: absolute;
+  top: 1px;
+  left: 0;
+  height: 1px;
+  background: #fff;
+}
+#forkongithub a::after {
+  bottom: 1px;
+  top: auto;
+}
+
+#forkongithub {
+  position: fixed;
+  display: block;
+  top: 0;
+  right: 0;
+  width: 150px;
+  overflow: hidden;
+  height: 150px;
+  z-index: 99999;
+}
